--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.20.2",
+    "@google/generative-ai": "^0.7.1",
     "firebase": "^11.8.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
+    "openai": "^4.104.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
