--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@clerk/nextjs": "^6.20.2",
     "@google/generative-ai": "^0.7.1",
+    "@supabase/supabase-js": "^2.52.0",
     "firebase": "^11.8.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
     "openai": "^4.104.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
