--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@clerk/nextjs": "^6.20.2",
     "@google/generative-ai": "^0.7.1",
     "@supabase/supabase-js": "^2.52.0",
+    "cloudinary": "^2.7.0",
     "firebase": "^11.8.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
     "openai": "^4.104.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4",
