--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "openai": "^4.104.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-speech-recognition": "^4.0.1",
     "react-toastify": "^11.0.5",
     "uuid": "^11.1.0"
   },
@@ -28,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-speech-recognition": "^3.9.6",
     "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
